--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ body {
 }
 
 
-
 /* tts tabel */
 table {
   text-align: center;
@@ -55,14 +54,6 @@ table {
 td {
   width: 40px;
   height: 40px;
-}
-
-td input {
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  font-size: 14px;
-  text-transform: uppercase;
 }
 
 .black {
@@ -82,9 +73,22 @@ td input {
 .white p {
   margin: 0;
   padding: 0;
-  font-size: 12px;
+}
+
+.num-id {
+  margin: 0;
+  padding: 0;
+  font-size: 10px;
   float: left;
-  padding-bottom: 10px;
+  font-size: 10px;
+}
+
+.word-id {
+  margin: 0;
+  width: 70%;
+  height: 70%;
+  font-weight: bold;
+  text-align: center;
 }
 
 /* dropdown */
