--- a/style.css
+++ b/style.css
@@ -8,87 +8,38 @@ a {
   padding: 3px;
 }
 
-li {
-  list-style: none;
-  padding-left: 20px;
-  font-size: 16px;
+body {}
+
+
+.fill {
+  background-color: #ffffff;
+  border: 1px solid #000000;
+  display: flex;
 }
 
-
-body {
-  width: 1170px;
-  height: 600px;
+.void {
+  background-color: #000000;
+  border: 0.5px solid #ffff;
+  display: flex;
 }
 
-.tts-right {
-  width: 50%;
-  height: 400px;
-  float: right;
-  margin-bottom: 50px;
-}
-
-
-.tts-left {
-  width: 50%;
-  height: 400px;
-  float: left;
-  padding: 20px;
-  margin-bottom: 50px;
-  font-size: 18px;
-}
-
-.tts-bottom {
-  width: 100%;
-  height: 200px;
-  text-align: center;
-  display: inline-block;
-  border-top: 1px solid grey;
-}
-
-
-/* tts tabel */
-table {
-  text-align: center;
-}
-
-td {
-  width: 40px;
-  height: 40px;
-}
-
-.black {
-  background-color: black;
-  width: 40px;
-  height: 40px;
-}
-
-.white {
-  background-color: white;
-  border: 1px solid black;
-  width: 40px;
-  height: 40px;
-  margin: 0.5px;
-}
-
-.white p {
-  margin: 0;
-  padding: 0;
-}
-
-.num-id {
-  margin: 0;
-  padding: 0;
+.nomor {
   font-size: 10px;
-  float: left;
-  font-size: 10px;
-}
-
-.word-id {
-  margin: 0;
-  width: 70%;
-  height: 70%;
   font-weight: bold;
-  text-align: center;
+  margin-top: -1px;
+  margin-left: 2px;
 }
 
-/* dropdown */
+.huruf {
+  margin-top: 5px;
+  width: 100%;
+  text-align: center;
+  color: white;
+}
+
+.row-bawah {
+  border-top: 1px solid grey;
+  padding-top: 5px;
+  display: flex;
+  flex-wrap: wrap;
+}
